force-app/main/default/objects/Avetta_Coaching__c.object
<CustomObject>
    <fields>
        <fullName>Attendance_Actual__c</fullName>
        <label>Attendance - Actual</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Attendance_Goal__c</fullName>
        <label>Attendance - Goal</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>CSAT_Actual__c</fullName>
        <label>CSAT - Actual</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CSAT_Goal__c</fullName>
        <label>CSAT - Goal</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Coaching_Classification__c</fullName>
        <label>Coaching Classification</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Opportunity</fullName>
                </value>
                <value>
                    <fullName>Positive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Coaching_Feedback__c</fullName>
        <label>Coaching Feedback</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Compliance_Actual__c</fullName>
        <label>Compliance - Actual</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Compliance_Goal__c</fullName>
        <label>Compliance - Goal</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Corrective_Action__c</fullName>
        <label>Corrective Action</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Verbal</fullName>
                </value>
                <value>
                    <fullName>Written</fullName>
                </value>
                <value>
                    <fullName>Final</fullName>
                </value>
                <value>
                    <fullName>Termination</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Courteous_and_Professional_Actual__c</fullName>
        <label>Courteous and Professional - Actual</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Courteous_and_Professional_Goal__c</fullName>
        <label>Courteous and Professional - Goal</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Date_of_Coaching__c</fullName>
        <defaultValue>Today()</defaultValue>
        <label>Date of Coaching</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Previous_Coaching__c</fullName>
        <label>Date of Previous Coaching</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Employee_Name_Plain_Text__c</fullName>
        <description>Passes a plain text version of the employee name for use in the process builder.</description>
        <formula>Employee_Name__r.FirstName &amp; &quot; &quot; &amp;  Employee_Name__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Employee Full Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employee_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Employee Name</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Avetta_Coachings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Follow_up_Date__c</fullName>
        <label>Follow-up Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Follow_up_Items_Resolved__c</fullName>
        <label>Follow-up Items Resolved?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Follow_up_Items__c</fullName>
        <label>Follow-up Items</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Knowledge_Actual__c</fullName>
        <label>Knowledge - Actual</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Knowledge_Goal__c</fullName>
        <label>Knowledge - Goal</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Owner_ID__c</fullName>
        <description>Stores Owner ID</description>
        <formula>OwnerId</formula>
        <label>Owner ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Previous_Coaching__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>To link Previous Coaching to Follow Up Coaching</description>
        <label>Previous Coaching</label>
        <referenceTo>Avetta_Coaching__c</referenceTo>
        <relationshipLabel>Avetta Coachings</relationshipLabel>
        <relationshipName>Avetta_Coachings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Productivity_Actual__c</fullName>
        <label>Productivity - Actual</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Productivity_Goal__c</fullName>
        <label>Productivity - Goal</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quality_Actual__c</fullName>
        <label>Quality - Actual</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quality_Goal__c</fullName>
        <label>Quality - Goal</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Requires_Follow_up__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Requires Follow-up</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Resolution_Actual__c</fullName>
        <label>Resolution - Actual</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Resolution_Goal__c</fullName>
        <label>Resolution - Goal</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Phone</fullName>
                </value>
                <value>
                    <fullName>Chat</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Verification</fullName>
                </value>
                <value>
                    <fullName>Attendance</fullName>
                </value>
                <value>
                    <fullName>QA</fullName>
                </value>
                <value>
                    <fullName>Behavior</fullName>
                </value>
                <value>
                    <fullName>Side by Side</fullName>
                </value>
                <value>
                    <fullName>One on One</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Avetta Coaching</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Employee_Name_Plain_Text__c</columns>
        <columns>Date_of_Coaching__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Date_of_Previous_Coaching__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OWNER.FIRST_NAME</field>
            <operation>equals</operation>
        </filters>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>C-{0000}</displayFormat>
        <label>Coaching Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Avetta Coachings</pluralLabel>
    <recordTypes>
        <fullName>Case</fullName>
        <active>true</active>
        <label>Case</label>
    </recordTypes>
    <recordTypes>
        <fullName>Follow_up</fullName>
        <active>true</active>
        <label>Follow-up</label>
    </recordTypes>
    <recordTypes>
        <fullName>Performance</fullName>
        <active>true</active>
        <label>Performance</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Follow_Up_Date</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
Requires_Follow_up__c = TRUE, 
				OR  ( ISBLANK(Follow_up_Date__c),
								  	 ISBLANK(Follow_up_Items__c))
				)</errorConditionFormula>
        <errorDisplayField>Follow_up_Date__c</errorDisplayField>
        <errorMessage>Follow Up Date and Follow Up Items are required for follow up</errorMessage>
    </validationRules>
</CustomObject>